# pytorch_fem_solver

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_exponetial.py  example_exponetial_fem.py  example_exponetial_heavy.py  example_fracture_vpinns.py  example_fractures_fem.py  example_fractures_fem_convergence.py  example_fractures_nn_convergence.py  example_int_weak_plus_posterri.py  example_jump.py  example_loss_is_error.py  example_only_posteriori.py  example_patches.py  example_weak.py  example_weak_convergence.py  example_weak_int.py  example_weak_plus_posterri.py
src/: Neural_Network.py  TEST.py  TEST_int_lower_space_comp.py  TEST_jump_comp.py  Triangulation.py  __init__.py  compare_convergence.py  example_fracture_NN.py  example_fracture_vpinns.py  example_fractures_FEM.py  example_fractures_FEM_convergence.py  example_fractures_NN_convergence.py  example_jump.py  example_loss_is_error.py  example_weak.py  example_weak_convergence.py  example_weak_int.py  example_weak_plus_posterri.py  fem.py  fracture_fem.py  model.py  patches.py  plot_fractures.py  plot_mesh.py  save_fig_fractures.py  test_1_fracture.py  test_1_fracture_2d.py  test_Mesh_vs_MF_methods.py  test_assembly.py  test_derivate_wrt_inputs.py  test_fem_solver.py  test_fracture_jump.py  test_fracture_map.py  test_global_local_idx.py  test_interpolation_to_lower_space.py  test_jump.py  test_patches.py  test_strong.py  test_triangulation_int_space.py  test_weak.py  (+3 more)
test/: test_fem_solver.py  test_weak.py  xd.py
tests/: plot_fractures.py  save_fig_fractures.py  test_1_fracture.py  (+10 more)
(+38 files in other folders)
